--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "separate-camera-files",
   "version": "1.0.0",
   "description": "A Node.js tool to organize camera files by separating RAW(.RW2) files from JPG/MP4 files while maintaining folder structure",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "keywords": [
     "photo-organizer",
@@ -18,5 +19,11 @@
   "license": "ISC",
   "engines": {
     "node": ">=14.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.17.6",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
   }
 }
